core/static/css/pma.css
html {
    font-size: 0.875em;
}
body {
    background-color: white;
    font-family: 'Raleway', sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 1.45;
    color: #333;
}
p {
    margin-bottom: 1.3em;
}
h1,
h2,
h3,
h4 {
    margin: 1.414em 0 0.5em;
    font-family: 'Raleway', sans-serif;
    ;
    font-weight: inherit;
    line-height: 1.2;
}
h1 {
    margin-top: 0;
    font-size: 2.074em;
}
h2 {
    font-size: 1.728em;
}
h3 {
    font-size: 1.44em;
}
h4 {
    font-size: 1.2em;
}
small,
.font_small {
    font-size: 0.833em;
}
.pma-header{
    overflow: visible;
    margin-bottom: 50px;
}
.pma-hero {
    /*height: 644px;*/
}
.jumbotron.pma-hero {
    background-color: transparent;
    color: #ffffff;
}
.pma-hero h2 {
    margin: 0 0.5em 0 0.5em;
}
.pma-illustration {
    position: relative;
    margin-bottom: -28px;
}
.illustration-index {
    position: absolute;
    top: -386px;
}
.pma-navbar.navbar-nav {
    padding-top: 20px;
}
.pma-navbar.navbar-nav > li > a {
    color: #fff;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 14px;
    font-weight: bold;
    -webkit-border-radius: 25px;
    -moz-border-radius: 25px;
    border-radius: 25px;
    padding-top: 10px;
    padding-bottom: 10px;
}
.pma-navbar.navbar-nav > li > a:hover {
    background-color: #008bb4;
}
.pma-summary {
    height: 530px;
}
.pma-gradient {
    color: #fff !important;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2b7ab3+0,00a7b2+100 */
    background: rgb(43, 122, 179);
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#2b7ab3', endColorstr='#00a7b2', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
}
.navbar-brand {
    border-left: #70b0cb solid 1px;
    margin-left: 15px;
    margin-top: 15px;
    padding: 0px 0px 0px 5px;
    height: auto !important;
    color: #fff;
}
.footer-brand {
    display: block;
    margin: 1.414em 0 0.5em;
    padding: 0;
    height: auto !important;
    color: #000;
}
.navbar-brand:hover,
.navbar-brand:focus {
    color: #000;
}
.footer-brand:hover,
.footer-brand:focus {
    color: #000;
    text-decoration: none;
}
.navbar-brand #brand-01,
.navbar-brand #brand-02,
.navbar-brand #brand-03,
.footer-brand #brand-01,
.footer-brand #brand-02,
.footer-brand #brand-03 {
    display: block;
    clear: left;
    text-transform: uppercase;
    font-size: 16px;
    font-weight: bold;
}
.navbar-brand #brand-03 {
    color: #64eaf3;
}
.footer-brand #brand-03 {
    color: #337ab7;
}
.gray-box {
    background-color: #f8f9fa;
    padding: 0.1em .18em 2em 1.8em;
}
hr.pma-line-1 {
    border: 0;
    border-bottom: 2px solid #67e3be;
    width: 50px;
    margin: 20px 0;
}
hr.pma-line-2 {
    border: 0;
    border-bottom: 2px solid #d4d4d4;
    width: 50px;
    margin: 20px 0;
}
hr.pma-line-3 {
    border: 0;
    border-bottom: 2px solid #00a7b3;
    width: 50px;
    margin: 20px 0;
}
.pma-thumbnail {
    display: inline-block;
}
.pma-spacing-bottom {
    margin-bottom: 2em;
}
.pma-spacing-top {
    margin-top: 2em;
}
a.pma-special-link {
    color: #848f98;
    font-weight: bold;
    text-decoration: none;
}
a.pma-special-link:hover {
    text-decoration: none;
}
footer {
    padding-top: 50px;
    padding-bottom: 85px;
}
footer .copyright {
    color: #c2c7cb;
}
.pma-summary-box {
    background-color: #00a7b2;
    display: block;
    width: 220px;
    height: 75px;
    padding: 14px;
    position: absolute;
    top: 20px;
    right: 0px;
    color: #fff;
    font-weight: bold;
}
.info-box {
    display: block;
    width: 100%;
    margin-bottom: 15px;
}
.info-box-icon {
    display: block;
    float: left;
    height: 55px;
    width: 55px;
    text-align: center;
    line-height: 60px;
}
.info-box-content {
    padding: 5px 10px;
    margin-left: 55px;
}
.progress-description,
.info-box-text {
    display: block;
    font-size: 14px;
    overflow: hidden;
}
.info-box-number {
    display: inline-block;
    font-weight: bold;
    font-size: 12px;
}
.pma-green {
    color: #00a7b2;
}
.pma-blue {
    color: #007cb6;
}
.row-eq-height{
    display: table;
}
.col-eq-height{
    display: table-cell;
}

